--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_TOKEN='token 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'
+REACT_APP_TOKEN=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
